# navgreen

./: .gitignore  NavGreenGrafana.json  README.md  pyproject.toml  scripts.py
communication_PLC/: client.py  inference_client.py  inference_vm.py  server.py
communication_PLC/public_weather_installation/: data.csv  df_test.csv  loader.py  stats.json  test.py  utils.py
data/: README.md
hist_data_analysis/: __init__.py  __main__.py  analytics.py  classification_dataset.py  classification_dataset_meteo.py  config.yaml  correlate.py  data_and_connection.py  eval_ml_models.py  modbus_tcp_ip_python.ipynb  noa_data.py  preprocess.py  sampling_rate.py  train_eval_ml_models.py  train_ml_models.py  utils.py  visualize.py
hist_data_analysis/interpolation/: __init__.py  data_loader.py  hyperparameter_tuning.py  train_and_test_classif.py  utils.py
hist_data_analysis/mTAN/: __init__.py  best_model_params_hp.json  best_model_params_pvt.json  data_loader.py  hyperparameter_tuning.py  model.py  train_and_test.py  train_and_test_LSTM.py  train_and_test_classif.py  train_and_test_enc_dec.py  train_and_test_mTAN.py  train_and_test_regr.py  utils.py
hist_data_analysis/timeseries/: __init__.py  data_loader.py  model.py  train_and_test.py  train_and_test_mTAN.py
hist_data_analysis/transformer/: __init__.py  loader.py  model.py  test.py  train.py  tune.py  utils.py
hist_data_navgreen_analysis/: __init__.py  test_creation.py
live_data_analysis/: __init__.py  create_sample_input.py  data_and_connection.py  test_live_data.py
live_data_analysis/test/: sample_input.csv
navgreen_base/: __init__.py  influx.py  influx_weather.py  meteo_processing.py  processing.py  value_alarms.py  weather.py  weather_23_30.py  weather_2_30_am.py
testcases/: __init__.py  test_preprocessing.py
testcases/sample_data/: sample_input.csv  sample_output.csv
time_representations/: README.md  config.yaml  navgreen.yml
time_representations/hist_data_analysis/: eval_learnt_time_repr.py  eval_ml_models.py  train_ml_models.py  utils.py
time_representations/hist_data_analysis/interpolation/: mean_stds.json
time_representations/hist_data_analysis/mTAN/: data_loader.py  mean_stds.json  model.py  test_time_repr.py  train_and_test_classif.py
time_representations/hist_data_analysis/transformer/: df_train.csv  loader.py  test.py  train.py
time_representations/installation/: README.md  config.yaml
time_representations/installation/hist_data_analysis/: eval_ml_models.py  train_ml_models.py  utils.py
time_representations/installation/hist_data_analysis/mTAN/: data_loader.py  mean_stds.json  model.py  test_time_repr.py  train_and_test_classif.py
time_representations/installation/hist_data_analysis/transformer/: df_test.csv  df_train.csv  loader.py  test.py  train.py
time_representations/public_weather/: README.md  config.yaml
time_representations/public_weather/hist_data_analysis/: eval_ml_models.py  utils.py
time_representations/public_weather/hist_data_analysis/interpolation/: data_loader.py  model.py  train_and_test_classif.py
time_representations/public_weather/hist_data_analysis/mTAN/: model.py  train_and_test_classif.py
time_representations/public_weather/hist_data_analysis/transformer/: freqs_FixedBin.json  freqs_ValueCountBin.json  freqs_ValueRangeBin.json  loader.py  test.py  train.py  weights_FixedBin.json  weights_ValueCountBin.json  weights_ValueRangeBin.json
time_representations/public_weather_meteo/: config.yaml
time_representations/public_weather_meteo/hist_data_analysis/: eval_ml_models.py  train_ml_models.py  transfer_model.py  utils.py
time_representations/public_weather_meteo/hist_data_analysis/transformer/: loader.py  loader_init.py  test.py  train.py  tune.py
time_representations_hourly/: README.md  requirements.txt
time_representations_hourly/learned_time_representation/: eval_learnt_time_repr.py  eval_ml_models.py  train_ml_models.py
